--- a/InsertionSort/style.css
+++ b/InsertionSort/style.css
@@ -66,7 +66,9 @@ footer > section > button {
 }
 
 footer > section > .input {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 2px;
 }
 
