--- a/InsertionSort/style.css
+++ b/InsertionSort/style.css
@@ -5,6 +5,8 @@
 #wrapper {
   display: flex;
   flex-direction: column;
+
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 main {
@@ -57,6 +59,11 @@ footer > section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+a {
+  text-decoration: none;
+  color: #007bff;
 }
 
 footer > section > button {
